// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.runtime.kubernetes.kubedef;

option go_package = "namespacelabs.dev/foundation/framework/kubernetes/kubedef";

import "framework/kubernetes/kubedef/systeminfo.proto";

message KubernetesEnvDiagnostics {
    SystemInfo system_info = 1;

    string serialized_event_list = 2;
}